apps/static1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
        version: v1
    spec:
      containers:
        - name: echo-server
          image: hashicorp/http-echo:alpine
          args:
          - "-text=$SECRET_USERNAME&&$SECRET_PASSWORDé=&&$SECRET_USERNAME2&&$SECRET_PASSWORD2"
          ports:
            - name: http-port
              containerPort: 5678
