apps/static1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "echo1.192.168.1.31.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-service
  name: echo-service
spec:
  type: ClusterIP
  ports:
  - name: "echo-deployment"
    port: 8080
    targetPort: 80
  selector:
    app: echo-server
